# calcon

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
calcon/: __init__.py  app.py  expressions.py  grammar.lark  main.py  parsing.py  prelude.calcon  statements.py
tests/: conftest.py  debug.py  test_app.py  test_cli.py  test_parsing.py
