[tool.poetry]
name = "calcon"
version = "0.1.0"
description = "Calculator with physical quantities."
authors = ["Ederic Oytas <edericoytas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
